<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="2dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailAvatarParent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="-15dp"
            android:layout_marginBottom="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/detailAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorPrimary"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailLabelsParent"
            android:layout_toEndOf="@id/detailAvatarParent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginEnd="-20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

            <TextView
                android:id="@+id/detailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/detailUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailName"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/username"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/detailCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailUsername"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/company"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/detailLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailCompany"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/followers_icon"
            android:text="@string/tab_followers"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_following"
            android:icon="@drawable/following_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>